Header and Navbar: - Make font larger in the header - Menu items are part of the header and hamburger menu is reserved for mobile - Better padding on the navbar to match the container width - Make sure the donate button is always visible

--- a/src/components/sass/homepage.sass
+++ b/src/components/sass/homepage.sass
@@ -1,7 +1,7 @@
 .homepage
   .banner-wrapper
     width: 58%
-    margin: -3% auto 8% auto
+    margin: -2% auto 8% auto
     height: auto
     background: transparent
     display: block
@@ -45,6 +45,12 @@
       justify-content: center
       flex-direction: column
       text-align: left
+
+@media only screen and (max-width: 866px)
+  body .site
+    .homepage
+      .banner-wrapper
+        margin: -5% auto 8% auto
 
 @media only screen and (max-width: 600px)
   body .site
