--- a/src/components/sass/navbar.sass
+++ b/src/components/sass/navbar.sass
@@ -9,10 +9,12 @@
   z-index: 2
   transition: 0.5s /* 0.5 second transition effect to slide in the navbar */
   &.is-active
-    width: 400px
+    width: 100%
   ul
     margin: 0px // css reset
-    padding: 0px 30px
+    width: $container-width
+    margin: auto
+    padding: 0px 25px
   li
     list-style: none
     padding-bottom: 10px
@@ -25,6 +27,8 @@
     color: white
     margin-top: 0px
   .list-header
+    width: 75%
+  .list-header a
     font-size: 1.6em
     font-family: $header-font
   .donate-button
@@ -32,11 +36,10 @@
     padding: 8px
     text-align: center
     width: 150px
-    bottom: 100px
-    position: fixed
+    display: block
+    margin-top: 50px
 
 @media only screen and (max-width: 600px)
   body .site .navbar.is-active
-    width: 100%
-    .donate-button
-      bottom: 20px
+    ul
+      width: $container-width-mobile
